Fixed missing margin between inline radio buttons (#8976)

--- a/web/html/src/branding/css/base/forms.scss
+++ b/web/html/src/branding/css/base/forms.scss
@@ -64,6 +64,10 @@ input[type="checkbox"] {
     margin-bottom: 0;
   }
 
+  .radio-inline {
+    margin-right: 20px;
+  }
+
   .radio,
   .checkbox {
     min-height: 28px;
